Сверстал кнопку регистрации

--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -22,3 +22,11 @@ body {
 
   font-family: 'Roboto', 'Tahoma', sans-serif;
 }
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
