--- a/source/css/style.css
+++ b/source/css/style.css
@@ -14,3 +14,32 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', 'Tahoma', sans-serif; }
+
+a {
+  text-decoration: none; }
+
+button {
+  cursor: pointer; }
+
+.button-wrapper {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+
+.button-reg {
+  display: block;
+  width: 200px;
+  padding: 13px 30px;
+  border: none;
+  border-radius: 3px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+  font-weight: bold;
+  background-color: #558CB7; }
+  .button-reg:hover {
+    background-color: #417298; }
+  .button-reg:active {
+    color: #b3b3b3; }
