--- a/source/css/style.css
+++ b/source/css/style.css
@@ -18,8 +18,18 @@ body {
 a {
   text-decoration: none; }
 
-button {
-  cursor: pointer; }
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip: rect(0 0 0 0);
+  overflow: hidden; }
 
 .button-wrapper {
   position: absolute;
@@ -41,6 +51,8 @@ button {
   background-color: #558CB7; }
   .button-reg:hover {
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.4); }
+  .button-reg:active {
+    color: #b3b3b3; }
   .button-reg:focus {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4); }
   .button-reg:disabled {
